# Discarded_Material_Identification_system

./: .gitignore  Dockerfile  app.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml
templates/: index.html
yolov5/: detect.py  hubconf.py
yolov5/models/: experimental.py
yolov5/utils/: general.py
