[project]
name = "discarded-material-identification-system"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dill==0.3.5.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "from-root==1.0.2",
    "gdown>=6.1.0",
    "gitpython>=3.1.30",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.3",
    "notebook>=7.5.7",
    "numpy>=1.18.5",
    "opencv-python>=4.1.1",
    "pandas>=1.1.4",
    "pillow>=7.1.2",
    "psutil>=7.2.2",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "seaborn>=0.11.0",
    "setuptools>=65.5.1",
    "thop>=0.1.1",
    "torch>=1.7.0",
    "torchvision>=0.8.1",
    "tqdm>=4.64.0",
    "ultralytics>=8.0.111",
]
